# SAMYCore

./: CMakeLists.txt  Classes.txt  Dockerfile  README.md  Readme.m  RobotsConfiguration.yaml  RobotsConfiguration_minimal.yaml  SAMYCore_Library_includes.cmake  Skills.yaml  fixing_unions.txt  main.cpp  main_PublishUADP.c
.github/: CI_sketch.md
.github/actions/: build_linux.yaml  build_linux.yml  run_SAMYCore.yaml
.github/actions/build_SAMYCore_Linux/: action.yaml
.github/actions/build_linux/: action.yaml
.github/workflows/: build.yaml  build_all_linux.yaml
Common/: SAMYRobot.c  SAMYRobot.cpp
Common/include/: Publisher.h  SAMYRobot.h  Subscriber.h
Helpers/: helpers.cpp
Helpers/include/: helpers.h
OPCUA/CRCL_OPCUAModel/: CRCL.csv
OPCUA/CRCL_OPCUAModel/Published/: CRCL\CRCL.NodeIds.csv  CRCL_OPCUA\CRCL.NodeIds.csv
OPCUA/all_models/Published/: CRCL.Types.bsd_unionsCorrected
OPCUA/serverGenerator/: serverGenerator.cpp
OPCUA/serverGenerator/include/: serverGenerator.h
OPCUA_Models/: Fixing_Unions_in_compiled_namespace.txt  Readme.m
OPCUA_Models/CRCL_OPCUAModel/: CompileModel.sh
OPCUA_Models/CRCL_OPCUAModel/Published/: CRCL\CRCL.NodeIds.csv
OPCUA_Models/all_models/: CRCL.xml
OPCUA_Python/: CRCL.Types.bsd  CRCL_DataTypes.py  clientEvent.py  clientTest.py  template_basic_script.py
OPCUA_Python/BPMN_Automated_Sketch/: BPMN_main.py  CRCL_BPMN_Wrappers.py  CRCL_DataTypes.py  clientTest.py
OPCUA_Python/FreeOPCUA_fixed_stack/common/: events.py
Parsers/: yaml_parser.cpp
Parsers/include/: yaml_parser.h
SAMYControl/: PDDLbasedController_Configuration_File.txt  SAMYControlInterface.py  SAMYControllerBase.py  test.plan  testDTbasedController.py  testPDDLbasedController.py
SAMYControl/DTbasedController/: DTControlDotFileParser.py  DTbasedController.py
SAMYControl/PDDLbasedController/: PDDLbasedController.py  PDDLbasedControllerParser.py
SAMYControl/PDDLbasedController/min/: domain-min-temporal.pddl  min_notes.md  plan-min-strips-1-manual.plan  plan-min-strips-3-manual.plan  plan-min-temporal2-1-manual.plan  problem-min-strips-3.pddl
SAMYControl/UseCase1/: UseCase1_Controller.dot
SAMYControl/UseCase1/configFiles/: SAMYCoreConfig.yaml
SAMYControl/dtController_output/: UseCase1_Controller_X_metadata  UseCase1_Controller_Y_metadata  UseCase1_Controller_test
SAMYControl/minUseCase/PDDL/: domain-min-strips.pddl  domain-min-strips2.pddl  domain-min-temporal2.pddl  plan-min-strips-1-manual.plan  plan-min-strips-2-manual.plan  plan-min-strips2-1-manual.plan  plan-min-temporal-1-manual.plan  problem-min-strips-1.pddl  problem-min-strips-2.pddl  problem-min-strips2-1.pddl  problem-min-temporal-1.pddl  problem-min-temporal2-1.pddl  states-min-temporal-1-manual.txt  states-min-temporal2-1-manual.txt
Skills/Skill_1/: CMakeLists.txt  Skill_1.cpp  Skill_1.h
Skills/Test_skill/: ParametersTypes.txt  Skill_1.cpp  Skill_1.h  testSkillGenerator.py
Tests/: CMakeLists.txt
Tests/CRCLnamespace_tests/: CMakeLists.txt  testsClient.cpp  testsServer.cpp
Tools/: ci.sh  unions_fixer.py
Tools/cmake/: Default_CMakeLists_Skills.txt  generate_code.cmake  macros.cmake
Tools/reflection_generator/: Reflection_generator_backend.py  Reflections_OPCUA_generator.py
Tools/test_skill_generator/: CMakeLists.txt  SkillConfig.yaml
Utils/: samyskill.cpp
Utils/include/: samyskill.h
cofigFiles/: RobotsConfiguration.yaml
configFiles/: InformationSources.yaml  SAMYCoreConfig.yaml  SAMYCoreConfig_Desktop.yaml  compileSkills.sh  start.sh
configFiles/Skills/MoveTo2Skill/: MoveTo2.cpp
configFiles_examples/: DataBaseFile.yaml  RobotsConfiguration.yaml  SAMYCoreConfig.yaml
dtBasedController/: DTbasedController.py  notes.txt  test.py
dtControl_testing/: benchmark.html  benchmark.json
main_files_tests/: main_PublishMQTT.c  main_SubscribeUADP.c
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  samycore.cpp
src/Core/include/: samycore.h
src/Helpers/: CMakeLists.txt  helpers.cpp
src/Helpers/include/: helpers.h
src/InformationSource/: CMakeLists.txt
src/OPCUA_Server/: CMakeLists.txt  OpcUaServer.cpp
src/OPCUA_Server/include/: helper.hpp
src/Parsers/: CMakeLists.txt  dataBaseParser.cpp  informationSourcesParser.cpp  robotsParser.cpp  samycoreConfigParser.cpp  skillsParser.cpp  skillsParser_orig.cpp
src/Parsers/include/: yaml_parsers.h
src/Reflection/: CMakeLists.txt  README.txt  typeName_ffiType_map.cpp
src/Reflection/include/: Auxiliar_traits.h  CastersRegistry.h  FFI_reflection.h  FFI_reflection_types.h  NodesIdsRegistry.h  README.txt  Reflection.h  Reflection_macros.h  typeName_ffiType_map.h  typed_literals.h
src/Reflection/usage_examples/: Python_objects_creator.h  ToyReflectionExample.cpp  Value_Printers.h
src/SAMYCoreConfig/: CMakeLists.txt
src/SAMYCoreConfig/include/: samycoreConfig.h
src/SAMYCoreInterfaceGenerator/: CMakeLists.txt  robotsNodesAddition.cpp  samycoreInterfaceGenerator.cpp  skillsMethodsCallbacks.cpp  skillsNodesAddition.cpp  systemStatusNodes.cpp
src/SAMYCoreInterfaceGenerator/include/: samycoreInterfaceGenerator.h
src/SAMYRobot/: CMakeLists.txt  SAMYRobot.cpp
src/SAMYRobot/include/: SAMYRobot.h
src/SAMYSkill/: CMakeLists.txt  samyskill.cpp
src/SAMYSkill/SkillsScripting/: CMakeLists.txt  skillCallable.cpp  skillsScriptingAPI.cpp
src/SAMYSkill/SkillsScripting/include/: skillCallable.h  skillsScriptingAPI.h
src/SAMYSkill/include/: samyskill.h  skillConfig.h
src/Scripting/: CMakeLists.txt
src/Scripting/CPP/: CMakeLists.txt  README.txt  cppFunctionCaller.cpp  cppFunctionLoader.cpp
src/Scripting/CPP/include/: cppFunctionCaller.h  cppFunctionCompiler.h  cppFunctionLoader.h
src/Scripting/Python/: CMakeLists.txt  PythonASTEditor.py  README.txt  pythonFunctionCaller.cpp  pythonFunctionLoader.cpp
src/Scripting/Python/include/: Python_Helpers.h  pythonFunctionCaller.h  pythonFunctionLoader.h  pythonSubinterpreter.h  pythonWrapper.h
src/Scripting/include/: functionCaller.h  functionLoader.h
tools/: Generator_corrected_unions_DataStructures_BytesArray.py  ci.sh
(+44 files in other folders)
